fixed alignment for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ img {
 @media (max-width: 992px) {
   .navbar {
     min-height: 20vh;
+    min-width: 80vw;
     width: var(--sidbar-width);
   }
 }
